--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
 <% title "Sign up" %>
 
 <p>Already have an account? <%= link_to "Log in", login_path %>.</p>
+<p>Sign up with social media <%= link_to "Sign up", authentications_path %>.</p>
 
 <%= render 'form' %>
